# Eco-AI.ly

./: .gitignore  DASHBOARD_TESTING_SUMMARY.md  Home.py  PIE_CHART_ENHANCEMENTS.md  README.md  UI_FIXES_SUMMARY.md  app.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  secrets.toml  test_dashboard.js  test_dashboard.sh
.devcontainer/: devcontainer.json
.streamlit/: config.toml
backend/: api.py  carbon_intensity_ai.py  data_preparation.py  init.py  model_inference.py  other_countries.py  renewable_percentage_ai.py  (+2 more)
backend/api/CI_RP/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  uv.yaml
backend/api/CI_RP/.github/workflows/: deploy.yml
backend/api/CI_RP/app/: main.py  utils.py
frontend/streamlit/: .gitignore  Home.py  README.md  pyproject.toml  requirements.txt
frontend/streamlit/assets/: __init__.py
frontend/streamlit/assets/styles/: __init__.py
frontend/streamlit/backend/: api.py
frontend/streamlit/backend/carbon_intensity/: carbon_intensity_ai.py  carbon_intensity_model_stats.py  carbon_intensity_report.py  carbon_intensity_utils.py
frontend/streamlit/backend/carbon_intensity/models/: model_carbon_intensity.keras
frontend/streamlit/backend/production_consumption/: production_consumption_info.py
frontend/streamlit/backend/renewable_percentage/: renewable_percentage_ai.py  renewable_percentage_arbitrage.py  renewable_percentage_model_stats.py  renewable_percentage_report.py
frontend/streamlit/backend/renewable_percentage/models/: model_renewable_percentage.keras
(+107 files in other folders)
