[project]
name = "eco-ai-ly"
version = "0.1.0"
description = "Your Ecologial AI Ally"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fpdf==1.7.2",
    "joblib==1.4.2",
    "matplotlib==3.10.0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "plotly==5.13.0",
    "pytest>=7.0.1",
    "python-dotenv>=1.0.0",
    "requests>=2.27.1",
    "scikit-learn==1.6.1",
    "seaborn==0.13.2",
    "streamlit>=1.16.0",
    "tensorflow==2.18.0",
]
