[project]
name = "ci-rp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "joblib>=1.5.0",
    "load-dotenv>=0.1.0",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "tensorflow==2.18",
    "uvicorn>=0.34.2",
]
